Fixed tests, package scan form interceptors.* tests