@@ -13,11 +13,9 @@
    limitations under the License. */
 package com.predic8.membrane.core.interceptor.misc;
 
-import com.predic8.membrane.annot.MCElement;
-import com.predic8.membrane.core.exchange.Exchange;
-import com.predic8.membrane.core.http.Message;
-
-import java.util.Optional;
+import com.predic8.membrane.annot.*;
+import com.predic8.membrane.core.exchange.*;
+import com.predic8.membrane.core.http.*;
 
 @MCElement(name = "setHeader")
 public class SetHeaderInterceptor extends AbstractSetterInterceptor {
@@ -25,23 +23,26 @@ public class SetHeaderInterceptor extends AbstractSetterInterceptor {
     @Override
     protected boolean shouldSetValue(Exchange exc, Flow flow) {
         if (ifAbsent) {
-            var msg = msgFromExchange(exc, flow);
-            return msg.filter(message -> !message.getHeader().contains(name)).isPresent();
+            return !msgFromExchange(exc, flow).getHeader().contains(name);
         }
         return true;
     }
 
     @Override
     protected void setValue(Exchange exc, Flow flow, String eval) {
-        var msg = msgFromExchange(exc, flow);
-        msg.ifPresent(message -> message.getHeader().setValue(name, eval));
+        msgFromExchange(exc, flow).getHeader().setValue(name, eval);
     }
 
-    private Optional<Message> msgFromExchange(Exchange exc, Flow flow) {
+    /**
+     * TOOO this is duplicated and can be found somewhere else
+     * @param exc
+     * @param flow
+     * @return
+     */
+    private Message msgFromExchange(Exchange exc, Flow flow) {
         return switch (flow) {
-            case REQUEST -> Optional.of(exc.getRequest());
-            case RESPONSE -> Optional.of(exc.getResponse());
-            case ABORT -> Optional.empty();
+            case REQUEST -> exc.getRequest();
+            case RESPONSE, ABORT -> exc.getResponse();
         };
     }
 
@@ -52,6 +53,6 @@ public class SetHeaderInterceptor extends AbstractSetterInterceptor {
 
     @Override
     public String getShortDescription() {
-        return String.format("Sets the value of the HTTP header '%s' to %s.", name, value);
+        return "Sets the value of the HTTP header '%s' to the expression: %s.".formatted( name, value);
     }
 }
